continue composition root refactor && replace util.guard with Dawn.Guard && hook outstanding guard todos into guard lib

--- a/src/Catalyst.Helpers.FileSystem/Catalyst.Helpers.FileSystem.csproj
+++ b/src/Catalyst.Helpers.FileSystem/Catalyst.Helpers.FileSystem.csproj
@@ -40,6 +40,9 @@
     <ItemGroup>
       <ProjectReference Include="..\Catalyst.Helpers.Util\Catalyst.Helpers.Util.csproj" />
     </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="Dawn.Guard" Version="1.7.0" />
+    </ItemGroup>
     <PropertyGroup>
         <DefaultItemExcludes>./UnitTests</DefaultItemExcludes>
     </PropertyGroup>
