--- a/src/Catalyst.Helpers.Util/Catalyst.Helpers.Util.csproj
+++ b/src/Catalyst.Helpers.Util/Catalyst.Helpers.Util.csproj
@@ -30,6 +30,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="BouncyCastle.NetCore" Version="1.8.3" />
+    <PackageReference Include="Dawn.Guard" Version="1.7.0" />
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <DebugType>none</DebugType>
