--- a/src/Catalyst.Helpers.Workers/Catalyst.Helpers.Workers.csproj
+++ b/src/Catalyst.Helpers.Workers/Catalyst.Helpers.Workers.csproj
@@ -38,6 +38,9 @@
     <None Remove="UnitTests\**" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Dawn.Guard" Version="1.7.0" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Catalyst.Helpers.Logger\Catalyst.Helpers.Logger.csproj" />
   </ItemGroup>
   <PropertyGroup>
