--- a/src/Catalyst.Helpers.BigInteger/Catalyst.Helpers.BigInteger.csproj
+++ b/src/Catalyst.Helpers.BigInteger/Catalyst.Helpers.BigInteger.csproj
@@ -46,6 +46,9 @@
   <ItemGroup>
     <None Remove="UnitTests\**" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Dawn.Guard" Version="1.7.0" />
+  </ItemGroup>
   <PropertyGroup>
     <DefaultItemExcludes>./UnitTests</DefaultItemExcludes>
   </PropertyGroup>
