--- a/src/Catalyst.Helpers.CouchDB/Catalyst.Helpers.CouchDB.csproj
+++ b/src/Catalyst.Helpers.CouchDB/Catalyst.Helpers.CouchDB.csproj
@@ -35,6 +35,9 @@
     <ItemGroup>
         <None Remove="UnitTests\**" />
     </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="Dawn.Guard" Version="1.7.0" />
+    </ItemGroup>
     <PropertyGroup>
         <DefaultItemExcludes>./UnitTests</DefaultItemExcludes>
     </PropertyGroup>
