--- a/src/Catalyst.Helpers.Math/Catalyst.Helpers.Math.csproj
+++ b/src/Catalyst.Helpers.Math/Catalyst.Helpers.Math.csproj
@@ -29,7 +29,10 @@
         <DebugSymbols>False</DebugSymbols>
     </PropertyGroup>
     <ItemGroup>
-        <Compile Remove="UnitTests\**" />
+        <PackageReference Include="Dawn.Guard" Version="1.7.0" />
+    </ItemGroup>
+    <ItemGroup>
+    <Compile Remove="UnitTests\**" />
     </ItemGroup>
     <ItemGroup>
         <EmbeddedResource Remove="UnitTests\**" />
