--- a/src/Catalyst.Helpers.Streams/Catalyst.Helpers.Streams.csproj
+++ b/src/Catalyst.Helpers.Streams/Catalyst.Helpers.Streams.csproj
@@ -23,7 +23,7 @@
         <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     </PropertyGroup>
     <ItemGroup>
-
+        <PackageReference Include="Dawn.Guard" Version="1.7.0" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Catalyst.Helpers.Logger\Catalyst.Helpers.Logger.csproj" />
