--- a/src/Catalyst.Node.Events.Core/Catalyst.Node.Events.Core.csproj
+++ b/src/Catalyst.Node.Events.Core/Catalyst.Node.Events.Core.csproj
@@ -28,6 +28,7 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Autofac" Version="4.8.1" />
+        <PackageReference Include="Dawn.Guard" Version="1.7.0" />
     </ItemGroup>
     <ItemGroup>
         <Compile Remove="UnitTests\**" />
