--- a/src/Catalyst.Node.Modules.Core.Gossip/Catalyst.Node.Modules.Core.Gossip.csproj
+++ b/src/Catalyst.Node.Modules.Core.Gossip/Catalyst.Node.Modules.Core.Gossip.csproj
@@ -27,6 +27,7 @@
     <ItemGroup>
         <PackageReference Include="Akka" Version="1.3.11" />
         <PackageReference Include="Autofac" Version="4.8.1" />
+        <PackageReference Include="Dawn.Guard" Version="1.7.0" />
     </ItemGroup>
     <PropertyGroup Condition="'$(Configuration)'=='Release'">
         <DebugType>none</DebugType>
