--- a/src/Catalyst.Node.Modules.Core.Ledger/Catalyst.Node.Modules.Core.Ledger.csproj
+++ b/src/Catalyst.Node.Modules.Core.Ledger/Catalyst.Node.Modules.Core.Ledger.csproj
@@ -25,6 +25,7 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Autofac" Version="4.8.1" />
+        <PackageReference Include="Dawn.Guard" Version="1.7.0" />
     </ItemGroup>
     <PropertyGroup Condition="'$(Configuration)'=='Release'">
         <DebugType>none</DebugType>
