--- a/src/Catalyst.Node.Modules.Core.P2P/Catalyst.Node.Modules.Core.P2P.csproj
+++ b/src/Catalyst.Node.Modules.Core.P2P/Catalyst.Node.Modules.Core.P2P.csproj
@@ -26,7 +26,7 @@
         <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Autofac" Version="4.8.1" />
+        <PackageReference Include="Dawn.Guard" Version="1.7.0" />
     </ItemGroup>
     <PropertyGroup Condition="'$(Configuration)'=='Release'">
         <DebugType>none</DebugType>
