--- a/src/Catalyst.Node.Modules.Core.Transactions/Catalyst.Node.Modules.Core.Transactions.csproj
+++ b/src/Catalyst.Node.Modules.Core.Transactions/Catalyst.Node.Modules.Core.Transactions.csproj
@@ -27,6 +27,7 @@
     </ItemGroup>
     <ItemGroup>
       <PackageReference Include="Google.Protobuf" Version="3.6.1" />
+        <PackageReference Include="Dawn.Guard" Version="1.7.0" />
     </ItemGroup>
     <PropertyGroup Condition="'$(Configuration)'=='Release'">
         <DebugType>none</DebugType>
