--- a/src/Catalyst.Node/Catalyst.Node.csproj
+++ b/src/Catalyst.Node/Catalyst.Node.csproj
@@ -14,8 +14,8 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp2.1</TargetFramework>
         <PackageId>Catalyst.Node</PackageId>
-        <!--<Deterministic>true</Deterministic>-->
-        <!--<Optimize>true</Optimize>-->
+        <Deterministic>true</Deterministic>
+        <Optimize>true</Optimize>
         <PlatformTarget>AnyCPU</PlatformTarget>
         <RuntimeFrameworkVersion>2.1.1</RuntimeFrameworkVersion>
         <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
@@ -25,10 +25,7 @@
         <GenerateAssemblyProductAttribute>true</GenerateAssemblyProductAttribute>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Akka" Version="1.3.11" />
         <PackageReference Include="Autofac" Version="4.8.1" />
-        <PackageReference Include="Akka.Remote" Version="1.3.10" />
-        <PackageReference Include="Akka.DI.AutoFac" Version="1.3.9" />
         <PackageReference Include="Autofac.Configuration" Version="4.1.0" />
         <PackageReference Include="BouncyCastle.NetCore" Version="1.8.3" />
         <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.2.5" />
@@ -37,6 +34,7 @@
         <PackageReference Include="Serilog" Version="2.7.1" />
         <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
         <PackageReference Include="Serilog.Sinks.File" Version="4.0.1-dev-00801" />
+        <PackageReference Include="Dawn.Guard" Version="1.7.0" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Catalyst.Helpers.Ipfs\Catalyst.Helpers.Ipfs.csproj" />
@@ -48,16 +46,14 @@
         <ProjectReference Include="..\Catalyst.Helpers.RLP\Catalyst.Helpers.RLP.csproj" />
         <ProjectReference Include="..\Catalyst.Helpers.Shell\Catalyst.Helpers.Shell.csproj" />
         <ProjectReference Include="..\Catalyst.Node.Modules.Core.Consensus\Catalyst.Node.Modules.Core.Consensus.csproj" />
+        <ProjectReference Include="..\Catalyst.Node.Modules.Core.Contract\Catalyst.Node.Modules.Core.Contract.csproj" />
         <ProjectReference Include="..\Catalyst.Node.Modules.Core.Dfs\Catalyst.Node.Modules.Core.Dfs.csproj" />
         <ProjectReference Include="..\Catalyst.Node.Modules.Core.Gossip\Catalyst.Node.Modules.Core.Gossip.csproj" />
         <ProjectReference Include="..\Catalyst.Node.Modules.Core.Ledger\Catalyst.Node.Modules.Core.Ledger.csproj" />
         <ProjectReference Include="..\Catalyst.Node.Modules.Core.Mempool\Catalyst.Node.Modules.Core.Mempool.csproj" />
+        <ProjectReference Include="..\Catalyst.Node.Modules.Core.P2P\Catalyst.Node.Modules.Core.P2P.csproj" />
         <ProjectReference Include="..\Catalyst.Node.Modules.Core.Transactions\Catalyst.Node.Modules.Core.Transactions.csproj" />
         <ProjectReference Include="..\Catalyst.Node.Modules.Core\Catalyst.Node.Modules.Core.csproj" />
-    </ItemGroup>
-    <ItemGroup>
-        <ProjectReference Include="..\Catalyst.Node.Modules.Core.Contract\Catalyst.Node.Modules.Core.Contract.csproj" />
-        <ProjectReference Include="..\Catalyst.Node.Modules.Core.P2P\Catalyst.Node.Modules.Core.P2P.csproj" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\..\Sdk\Catalyst.Protocol.Mempool\csharp\Catalyst.Protocol.Mempool.csproj" />
