--- a/src/Catalyst.Helpers.RLP/Catalyst.Helpers.RLP.csproj
+++ b/src/Catalyst.Helpers.RLP/Catalyst.Helpers.RLP.csproj
@@ -19,6 +19,7 @@
     <Optimize>true</Optimize>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <RuntimeFrameworkVersion>2.1.1</RuntimeFrameworkVersion>
+    <LangVersion>7.2</LangVersion>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>true</GenerateAssemblyCompanyAttribute>
