--- a/src/Catalyst.Helpers.Bash/Catalyst.Helpers.Bash.csproj
+++ b/src/Catalyst.Helpers.Bash/Catalyst.Helpers.Bash.csproj
@@ -12,6 +12,7 @@
         <AssemblyCompanyAttribute>AtlasCity.io</AssemblyCompanyAttribute>
         <AssemblyCopyrightAttribute>Copyright © 2019 AtlasCity.io</AssemblyCopyrightAttribute>
         <TargetFramework>netcoreapp2.1</TargetFramework>
+        <LangVersion>7.2</LangVersion>
         <RootNamespace>Catalyst.Helpers.Bash</RootNamespace>
         <PackageId>Catalyst.Helpers.Bash</PackageId>
         <AssemblyName>Catalyst.Helpers.Bash</AssemblyName>
