--- a/src/Catalyst.Helpers.BigInteger/Catalyst.Helpers.BigInteger.csproj
+++ b/src/Catalyst.Helpers.BigInteger/Catalyst.Helpers.BigInteger.csproj
@@ -13,6 +13,7 @@
     <AssemblyCompanyAttribute>AtlasCity.io</AssemblyCompanyAttribute>
     <AssemblyCopyrightAttribute>Copyright © 2019 AtlasCity.io</AssemblyCopyrightAttribute>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <LangVersion>7.2</LangVersion>
     <RootNamespace>Catalyst.Helpers.BigInteger</RootNamespace>
     <PackageId>Catalyst.Helpers.BigInteger</PackageId>
     <AssemblyName>Catalyst.Helpers.BigInteger</AssemblyName>
