--- a/src/Catalyst.Helpers.Exceptions/Catalyst.Helpers.Exceptions.csproj
+++ b/src/Catalyst.Helpers.Exceptions/Catalyst.Helpers.Exceptions.csproj
@@ -12,6 +12,7 @@
         <AssemblyCompanyAttribute>AtlasCity.io</AssemblyCompanyAttribute>
         <AssemblyCopyrightAttribute>Copyright © 2019 AtlasCity.io</AssemblyCopyrightAttribute>
         <TargetFramework>netcoreapp2.1</TargetFramework>
+        <LangVersion>7.2</LangVersion>
         <RootNamespace>Catalyst.Helpers.Exceptions</RootNamespace>
         <PackageId>Catalyst.Helpers.Exceptions</PackageId>
         <AssemblyName>Catalyst.Helpers.Exceptions</AssemblyName>
