--- a/src/Catalyst.Helpers.Hex/Catalyst.Helpers.Hex.csproj
+++ b/src/Catalyst.Helpers.Hex/Catalyst.Helpers.Hex.csproj
@@ -12,6 +12,7 @@
     <AssemblyCompanyAttribute>AtlasCity.io</AssemblyCompanyAttribute>
     <AssemblyCopyrightAttribute>Copyright © 2019 AtlasCity.io</AssemblyCopyrightAttribute>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <LangVersion>7.2</LangVersion>
     <RootNamespace>Catalyst.Helpers.Hex</RootNamespace>
     <PackageId>Catalyst.Helpers.Hex</PackageId>
     <AssemblyName>Catalyst.Helpers.Hex</AssemblyName>
