--- a/src/Catalyst.Helpers.IO/Catalyst.Helpers.IO.csproj
+++ b/src/Catalyst.Helpers.IO/Catalyst.Helpers.IO.csproj
@@ -12,6 +12,7 @@
     <AssemblyCompanyAttribute>AtlasCity.io</AssemblyCompanyAttribute>
     <AssemblyCopyrightAttribute>Copyright © 2019 AtlasCity.io</AssemblyCopyrightAttribute>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <LangVersion>7.2</LangVersion>
     <RootNamespace>Catalyst.Helpers.IO</RootNamespace>
     <PackageId>Catalyst.Helpers.IO</PackageId>
     <AssemblyName>Catalyst.Helpers.IO</AssemblyName>
