--- a/src/Catalyst.Helpers.Ipfs/Catalyst.Helpers.Ipfs.csproj
+++ b/src/Catalyst.Helpers.Ipfs/Catalyst.Helpers.Ipfs.csproj
@@ -12,6 +12,7 @@
         <AssemblyCompanyAttribute>AtlasCity.io</AssemblyCompanyAttribute>
         <AssemblyCopyrightAttribute>Copyright © 2019 AtlasCity.io</AssemblyCopyrightAttribute>
         <TargetFramework>netcoreapp2.1</TargetFramework>
+        <LangVersion>7.2</LangVersion>
         <RootNamespace>Catalyst.Helpers.Ipfs</RootNamespace>
         <PackageId>Catalyst.Helpers.Ipfs</PackageId>
         <Deterministic>true</Deterministic>
