--- a/src/Catalyst.Helpers.Redis/Catalyst.Helpers.Redis.csproj
+++ b/src/Catalyst.Helpers.Redis/Catalyst.Helpers.Redis.csproj
@@ -12,11 +12,13 @@
         <AssemblyCompanyAttribute>AtlasCity.io</AssemblyCompanyAttribute>
         <AssemblyCopyrightAttribute>Copyright © 2019 AtlasCity.io</AssemblyCopyrightAttribute>
         <TargetFramework>netcoreapp2.1</TargetFramework>
+        <LangVersion>7.2</LangVersion>
         <RootNamespace>Catalyst.Helpers.Redis</RootNamespace>
         <PackageId>Catalyst.Helpers.Redis</PackageId>
         <Deterministic>true</Deterministic>
         <Optimize>true</Optimize>
         <PlatformTarget>AnyCPU</PlatformTarget>
+        <LangVersion>7.2</LangVersion>
         <RuntimeFrameworkVersion>2.1.1</RuntimeFrameworkVersion>
         <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
         <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
