--- a/src/Catalyst.Node.Modules.Core.Dfs/Catalyst.Node.Modules.Core.Dfs.csproj
+++ b/src/Catalyst.Node.Modules.Core.Dfs/Catalyst.Node.Modules.Core.Dfs.csproj
@@ -12,6 +12,7 @@
         <AssemblyCompanyAttribute>AtlasCity.io</AssemblyCompanyAttribute>
         <AssemblyCopyrightAttribute>Copyright © 2019 AtlasCity.io</AssemblyCopyrightAttribute>
         <TargetFramework>netcoreapp2.1</TargetFramework>
+        <LangVersion>7.2</LangVersion>
         <PackageId>Catalyst.Node.Modules.Core.Dfs</PackageId>
         <Deterministic>true</Deterministic>
         <Optimize>true</Optimize>
