--- a/src/Catalyst.Node.Modules.Core.Gossip/Catalyst.Node.Modules.Core.Gossip.csproj
+++ b/src/Catalyst.Node.Modules.Core.Gossip/Catalyst.Node.Modules.Core.Gossip.csproj
@@ -13,6 +13,7 @@
         <AssemblyCompanyAttribute>AtlasCity.io</AssemblyCompanyAttribute>
         <AssemblyCopyrightAttribute>Copyright © 2019 AtlasCity.io</AssemblyCopyrightAttribute>
         <TargetFramework>netcoreapp2.1</TargetFramework>
+        <LangVersion>7.2</LangVersion>
         <RootNamespace>Catalyst.Node.Modules.Core.Gossip</RootNamespace>
         <PackageId>Catalyst.Node.Modules.Core.Gossip</PackageId>
         <Deterministic>true</Deterministic>
