--- a/src/Catalyst.Node/Catalyst.Node.csproj
+++ b/src/Catalyst.Node/Catalyst.Node.csproj
@@ -32,6 +32,8 @@
         <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.2.5" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
         <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.1.1" />
+        <PackageReference Include="Networker" Version="3.0.9-rc" />
+        <PackageReference Include="Networker.Formatter.ProtobufNet" Version="3.0.9-rc" />
         <PackageReference Include="Serilog" Version="2.7.1" />
         <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
         <PackageReference Include="Serilog.Sinks.File" Version="4.0.1-dev-00801" />
@@ -54,7 +56,6 @@
         <ProjectReference Include="..\Catalyst.Node.Modules.Core.Mempool\Catalyst.Node.Modules.Core.Mempool.csproj" />
         <ProjectReference Include="..\Catalyst.Node.Modules.Core.P2P\Catalyst.Node.Modules.Core.P2P.csproj" />
         <ProjectReference Include="..\Catalyst.Node.Modules.Core.Transactions\Catalyst.Node.Modules.Core.Transactions.csproj" />
-        <ProjectReference Include="..\Catalyst.Node.Modules.Core\Catalyst.Node.Modules.Core.csproj" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\..\Sdk\Catalyst.Protocol.Mempool\csharp\Catalyst.Protocol.Mempool.csproj" />
