--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,22 +1,34 @@
-image: microsoft/dotnet:latest
+build:dotnet:
+    image: microsoft/dotnet:latest
 
-stages:
-    - build
-    - test
+    stages:
+        - build
+        - test
 
-variables:
-    test: "Example.Test"
+    before_script:
+        - "cd src"
+        - "dotnet restore"
 
-before_script:
-    - "cd src"
-    - "dotnet restore"
+    build:
+        stage: build
+        script:
+            - "dotnet build"
 
-build:
-    stage: build
-    script:
-        - "dotnet build"
+    test:
+        stage: test
+        script: 
+            - "ls ./**/UnitTests/*.csproj | dotnet test"
 
-test:
-    stage: test
-    script: 
-        - "ls ./**/UnitTests/*.csproj | dotnet test"
+build:docker:
+    image: docker:stable
+    
+    services:
+        - docker:dind
+    
+    stages:
+        - build
+
+    build:
+        stage: build
+        script:
+            - "docker build ."
