--- a/src/Catalyst.Helpers.Hex/UnitTests/Catalyst.Helpers.Hex.UnitTests.csproj
+++ b/src/Catalyst.Helpers.Hex/UnitTests/Catalyst.Helpers.Hex.UnitTests.csproj
@@ -1,14 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project>
     <PropertyGroup>
         <IsPackable>false</IsPackable>
         <Authors>James Kirby (james.kirby@atlascity.io)</Authors>
-        <IsPackable>false</IsPackable>
         <AssemblyName>Catalyst.Helpers.Hex.UnitTests</AssemblyName>
         <PackageId>Catalyst.Helpers.Hex.UnitTests</PackageId>
         <RootNamespace>Catalyst.Helpers.Hex.UnitTests</RootNamespace>
-        <TargetFramework>netcoreapp2.1</TargetFramework>
-        <RuntimeFrameworkVersion>2.1.1</RuntimeFrameworkVersion>
     </PropertyGroup>
+    <Import Project="../../Common.UnitTests.props" />
     <ItemGroup>
         <PackageReference Include="Microsoft.UnitTestFramework.Extensions" Version="2.0.0" />
         <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
