--- a/src/Catalyst.Node.Modules.Core.Mempool/UnitTests/Catalyst.Node.Modules.Core.Mempool.UnitTest.csproj
+++ b/src/Catalyst.Node.Modules.Core.Mempool/UnitTests/Catalyst.Node.Modules.Core.Mempool.UnitTest.csproj
@@ -10,6 +10,8 @@
         <RuntimeFrameworkVersion>2.1.1</RuntimeFrameworkVersion>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="FluentAssertions" Version="5.6.0" />
+        <PackageReference Include="NSubstitute" Version="4.0.0" />
         <PackageReference Include="StackExchange.Redis" Version="2.0.513" />
         <PackageReference Include="StackExchange.Redis.Extensions.Core" Version="4.0.5" />
         <PackageReference Include="StackExchange.Redis.Extensions.Newtonsoft" Version="4.0.5" />
@@ -17,6 +19,8 @@
         <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
         <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+        <PackageReference Include="xunit.core" Version="2.4.1" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\..\Catalyst.Helpers.RLP\Catalyst.Helpers.RLP.csproj" />
