--- a/src/Catalyst.Node.Common.UnitTests/Catalyst.Node.Common.UnitTests.csproj
+++ b/src/Catalyst.Node.Common.UnitTests/Catalyst.Node.Common.UnitTests.csproj
@@ -1,10 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>netcoreapp2.1</TargetFramework>
-        <IsPackable>false</IsPackable>
-    </PropertyGroup>
-
+    <Import Project="../Common.UnitTests.props" />
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
         <PackageReference Include="xunit" Version="2.4.0" />
