--- a/VagrantEnviroments/Ubuntu/16.04/NetCore2.0/Vagrantfile
+++ b/VagrantEnviroments/Ubuntu/16.04/NetCore2.0/Vagrantfile
@@ -5,8 +5,8 @@ Vagrant.configure("2") do |config|
   
   config.ssh.shell="bash"
 
-  config.vm.define "catalystNodeDebian9Netcore21" do |catalystNodeDebian9Netcore21|
-  	catalystNodeDebian9Netcore21.vm.box = "debian/stretch64"
+  config.vm.define "catalystNodeUbuntu1604Netcore20" do |catalystNodeUbuntu1604Netcore20|
+  	catalystNodeUbuntu1604Netcore20.vm.box = "ubuntu/xenial64"
   end 
   
   config.vm.network "public_network",
@@ -22,11 +22,10 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", inline: <<-SHELL
 	wget -qO- https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.asc.gpg
 	sudo mv microsoft.asc.gpg /etc/apt/trusted.gpg.d/
-	wget -q https://packages.microsoft.com/config/debian/9/prod.list
+	wget -q https://packages.microsoft.com/config/ubuntu/16.04/prod.list
 	sudo mv prod.list /etc/apt/sources.list.d/microsoft-prod.list
 	sudo chown root:root /etc/apt/trusted.gpg.d/microsoft.asc.gpg
 	sudo chown root:root /etc/apt/sources.list.d/microsoft-prod.list
-	sudo apt-get update
-	sudo apt-get install -y dotnet-sdk-2.1 openssl dotnet-runtime-deps-2.1 htop lsof git
+	sudo apt-get install -y dotnet-sdk-2.0.0 dotnet-runtime-2.0.0 git lsof htop
   SHELL
 end
