--- a/VagrantEnviroments/Ubuntu/16.04/NetCore2.1/Vagrantfile
+++ b/VagrantEnviroments/Ubuntu/16.04/NetCore2.1/Vagrantfile
@@ -5,14 +5,14 @@ Vagrant.configure("2") do |config|
   
   config.ssh.shell="bash"
 
-  config.vm.define "node1" do |catalyst-node-ubuntu1604|
-  	node1.vm.box = "ubuntu/xenial64"
+  config.vm.define "catalystNodeUbuntu1604Netcore21" do |catalystNodeUbuntu1604Netcore21|
+  	catalystNodeUbuntu1604Netcore21.vm.box = "ubuntu/xenial64"
   end 
   
   config.vm.network "public_network",
   use_dhcp_assigned_default_route: true
    
-  config.vm.synced_folder "/srv/Dev/catalyst-node", "/srv"
+  config.vm.synced_folder "/srv/dev/catalyst-node", "/srv"
 
   config.vm.provider "virtualbox" do |vb|
     vb.gui = false
@@ -30,6 +30,6 @@ Vagrant.configure("2") do |config|
 	sudo chown root:root /etc/apt/sources.list.d/microsoft-prod.list
 	apt update
 	apt upgrade
-	sudo apt-get install dotnet-sdk-2.1 openssl dotnet-runtime-deps-2.1 htop lsof git
+	sudo apt-get install -y dotnet-sdk-2.1 openssl dotnet-runtime-deps-2.1 htop lsof git
   SHELL
 end
