trying to fix the pipelines by cleaning the csprojs

--- a/src/Catalyst.Node.Common/Catalyst.Node.Common.csproj
+++ b/src/Catalyst.Node.Common/Catalyst.Node.Common.csproj
@@ -1,8 +1,6 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project>
 
-    <PropertyGroup>
-        <TargetFramework>netcoreapp2.1</TargetFramework>
-    </PropertyGroup>
+    <Import Project="../Common.Projects.props" />
 
     <ItemGroup>
       <ProjectReference Include="..\Catalyst.Protocol\Catalyst.Protocol.csproj" />
