--- a/src/Common.Projects.props
+++ b/src/Common.Projects.props
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <Company>Atlas City</Company>
+        <Company>AtlasCity.io</Company>
         <Copyright>Copyright © 2019 AtlasCity.io</Copyright>
         <PackageLicenseUrl>http://github.com/atlascity/catalyst-node/LICENSE.md</PackageLicenseUrl>
         <PackageProjectUrl>http://github.com/atlascity/catalyst-node</PackageProjectUrl>
@@ -10,10 +10,18 @@
         <TargetFramework>netcoreapp2.1</TargetFramework>
         <RuntimeFrameworkVersion>2.1.1</RuntimeFrameworkVersion>
         <LangVersion>7.3</LangVersion>
+        <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+        <Deterministic>true</Deterministic>
+        <Optimize>true</Optimize>
+        <PlatformTarget>AnyCPU</PlatformTarget>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Version)' == '' ">
         <VersionPrefix Condition=" '$(VersionPrefix)' == '' ">0.0.1</VersionPrefix>
         <Version Condition=" '$(VersionSuffix)' != '' ">$(VersionPrefix).$(VersionSuffix)</Version>
         <Version Condition=" '$(Version)' == '' ">$(VersionPrefix)</Version>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)'=='Release'">
+        <DebugType>none</DebugType>
+        <DebugSymbols>False</DebugSymbols>
     </PropertyGroup>
 </Project>
