--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -2,7 +2,7 @@
   "defaultAssembly": "Catalyst.Node.Core",
   "components": [
     {
-      "type": "Catalyst.Node.Core.Components.Redis.Redis, Catalyst.Node.Core",
+      "type": "Catalyst.Node.Core.Components.Redis.RedisStore, Catalyst.Node.Core",
       "services": [
         {
           "type": "Catalyst.Node.Common.IKeyValueStore, Catalyst.Node.Common"
