--- a/src/Catalyst.Cli/Catalyst.Cli.csproj
+++ b/src/Catalyst.Cli/Catalyst.Cli.csproj
@@ -1,5 +1,6 @@
 ﻿<Project>
   <PropertyGroup>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <Title>Catalyst CLI</Title>
     <Authors>James Kirkby (james.kirby@atlascity.io)</Authors>
     <PackageDescription>CLI tool to interact with Catalyst Nodes via RPC</PackageDescription>
